add placeholders for all lectures

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </textarea>
           </section>
 
-          <section> <!-- start of nested slides/column -->
+          <section> <!-- start of Introduction -->
             <section data-state="standard">
               <h2>html slides</h2>
               <p>content</p>
@@ -52,7 +52,126 @@
                 - another one
               </textarea>
             </section>
-          </section> <!-- end of nested slides/column -->
+          </section> <!-- end of Introduction -->
+
+          <section> <!-- start of Software Dependencies -->
+            <section data-state="standard">
+              <h2>html slides</h2>
+              <p>content</p>
+              <p>with html</p>
+            </section>
+
+            <section data-state="standard" data-markdown>
+              <textarea data-template>
+                # Header
+
+                - list item
+                - another one
+              </textarea>
+            </section>
+          </section> <!-- end of Software Dependencies -->
+
+          <section> <!-- start of Software Documentation -->
+            <section data-state="standard">
+              <h2>html slides</h2>
+              <p>content</p>
+              <p>with html</p>
+            </section>
+
+            <section data-state="standard" data-markdown>
+              <textarea data-template>
+                # Header
+
+                - list item
+                - another one
+              </textarea>
+            </section>
+          </section> <!-- end of Software Documentation -->
+
+          <section> <!-- start of Code Conventions and Modular Coding -->
+            <section data-state="standard">
+              <h2>html slides</h2>
+              <p>content</p>
+              <p>with html</p>
+            </section>
+
+            <section data-state="standard" data-markdown>
+              <textarea data-template>
+                # Header
+
+                - list item
+                - another one
+              </textarea>
+            </section>
+          </section> <!-- end of Code Conventions and Modular Coding -->
+
+          <section> <!-- start of Next Steps: How to make your code reusable -->
+            <section data-state="standard">
+              <h2>html slides</h2>
+              <p>content</p>
+              <p>with html</p>
+            </section>
+
+            <section data-state="standard" data-markdown>
+              <textarea data-template>
+                # Header
+
+                - list item
+                - another one
+              </textarea>
+            </section>
+          </section> <!-- end of Next Steps: How to make your code reusable -->
+
+          <section> <!-- start of Work on Your Own Project -->
+            <section data-state="standard">
+              <h2>html slides</h2>
+              <p>content</p>
+              <p>with html</p>
+            </section>
+
+            <section data-state="standard" data-markdown>
+              <textarea data-template>
+                # Header
+
+                - list item
+                - another one
+              </textarea>
+            </section>
+          </section> <!-- end of Work on Your Own Project -->
+
+          <section> <!-- start of Reusability Check -->
+            <section data-state="standard">
+              <h2>html slides</h2>
+              <p>content</p>
+              <p>with html</p>
+            </section>
+
+            <section data-state="standard" data-markdown>
+              <textarea data-template>
+                # Header
+
+                - list item
+                - another one
+              </textarea>
+            </section>
+          </section> <!-- end of Reusability Check -->
+
+          <section> <!-- start of Wrap-Up -->
+            <section data-state="standard">
+              <h2>html slides</h2>
+              <p>content</p>
+              <p>with html</p>
+            </section>
+
+            <section data-state="standard" data-markdown>
+              <textarea data-template>
+                # Header
+
+                - list item
+                - another one
+              </textarea>
+            </section>
+          </section> <!-- end of Wrap-Up -->
 
         <!-- END YOUR SLIDES -->
       </div>
