--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                   <ul>
                     <li>N.B.: also include <code>.RProfile</code> and <code>activate.R</code></li>
                   </ul>
-                  <li>git: <code>git add [filename]</code></li>
+                  <li>git: <code>git add [filenames]</code></li>
                 </ul>
                 <li><b>Commit</b></li>
                 <ul>
