--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
 
     <!-- BEGIN CHANGE ME -->
-    <title>TITLE</title>
-    <meta name="description" content="PRESENTATION DESCRIPTION">
-    <meta name="author" content="AUTHOR NAME">
+    <title>Reproducible Research Through Reusable Code - Workshop Slides</title>
+    <meta name="description" content="Reproducible research is the foundation of science. This workshop is tailored for PhD candidates and Research Software Engineers affiliated with Dutch research institutions who would like to learn more about how to apply best practices to make your research reproducible through reusable code.">
+    <meta name="author" content="Ole Mussmann, Malte Luken">
     <!-- END CHANGE ME -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
