--- a/index.html
+++ b/index.html
@@ -154,19 +154,157 @@
 
           <section> <!-- start of Software Documentation -->
             <section data-state="standard">
-              <h2>html slides</h2>
-              <p>content</p>
-              <p>with html</p>
+              <h2>Software Documentation</h2>
+              <p>How to make software easier to understand</p>
             </section>
 
             <section data-state="standard" data-markdown>
               <textarea data-template>
-                # Header
+                ### Writing good README files
 
-                - list item
-                - another one
+                - First landing page for other developers/users
+                - On GitHub/GitLab/CRAN or attached to the software
+                - Answers three questions:
+                  - Why should I use the software?
+                  - How do I use it?
+                  - How can I install it?
+
               </textarea>
             </section>
+
+            <section data-state="standard" data-markdown>
+              <textarea data-template>
+                ### Structure of a good README
+
+                - Descriptive title
+                - Motivation (why?)
+                - How to setup/install
+                - Copy-pastable quick start code example
+                - Link or instructions for contributing (see also CONTRIBUTING.md)
+                - License
+                - Recommended citation (see also CITATION.cff)
+
+              </textarea>
+            </section>
+
+            <section data-state="standard" data-markdown>
+              <textarea data-template>
+                ### In-code documentation
+
+                - Helps the reader understand the code
+                - Explains development decisions we make
+                - Does not repeat what is self-explanatory
+                - Does not replace good variable/function/class names
+                - Does not replace version control
+
+              </textarea>
+            </section>
+
+            <section data-state="standard" data-markdown>
+              <textarea data-template>
+                ### Readable vs. commented code
+
+                ```python
+                # convert from degrees celsius to fahrenheit
+                def convert(d):
+                    return d * 5 / 9 + 32
+                ```
+
+                vs.
+
+                ```python
+                def celsius_to_fahrenheit(degrees):
+                    return degrees * 5 / 9 + 32
+                ```
+
+              </textarea>
+            </section>
+
+            <section data-state="standard" data-markdown>
+              <textarea data-template>
+                ### Docstrings
+
+                Using regular comments:
+
+                ```python
+                # This function converts a temperature in Fahrenheit to Celsius.
+                def fahrenheit_to_celsius(temp_f: float) -> float:
+                    temp_c = (temp_f - 32.0) * (5.0/9.0)
+                    return temp_c
+                ```
+
+                Using docstrings:
+
+                ```python
+                def fahrenheit_to_celsius(temp_f: float) -> float:
+                    """
+                    Converts a temperature in Fahrenheit to Celsius.
+
+                    Parameters
+                    ----------
+                    temp_f : float
+                        The temperature in Fahrenheit.
+
+                    Returns
+                    -------
+                    float
+                        The temperature in Celsius.
+                    """
+                    return (temp_f - 32.0) * (5.0/9.0)
+                ```
+
+              </textarea>
+            </section>
+
+            <section data-state="standard" data-markdown>
+              <textarea data-template>
+                ### Docstrings
+
+                - Automatically generate help text
+                - Automatically generate API documentation
+                - Can be written for variables (constants), datasets, functions, classes, and modules
+                - Different tools for each language (e.g., Sphinx for Python, roxygen for R)
+                - Different styles (e.g., numpy vs. Google for Python)
+
+              </textarea>
+            </section>
+
+            <section data-state="standard" data-markdown>
+              <textarea data-template>
+                ### Writing good docstrings
+
+                - Follow a style (e.g., numpy)
+                - What does an object (e.g., function) do?
+                - What is the input and the output (including types)?
+                - Example on how to use the object (test your examples automatically)
+                - Be concise (a docstring is not a tutorial or a scientific paper)
+
+              </textarea>
+            </section>
+
+            <section data-state="standard" data-markdown>
+              <textarea data-template>
+                ### Online documentation
+
+                - Create your API documentation automatically (e.g., using Sphinx or roxygen)
+                - Deploy your documentation automatically to a GitHub page or Read the Docs
+
+              </textarea>
+            </section>
+
+            <section data-state="standard" data-markdown>
+              <textarea data-template>
+                ### Resources
+
+                - README guide and template: https://www.makeareadme.com/
+                - Hemingway app: https://hemingwayapp.com/
+                - Writing good comments: https://stackoverflow.blog/2021/12/23/best-practices-for-writing-code-comments/
+                - numpydoc style guide: https://numpydoc.readthedocs.io/en/latest/format.html#
+                - The Turing Way Community. (2022). <em>Writing human readable code</em>. Zenodo. https://zenodo.org/records/7625728
+
+              </textarea>
+            </section>
+
           </section> <!-- end of Software Documentation -->
 
           <section> <!-- start of Code Conventions and Modular Coding -->
