Add next steps slides

--- a/index.html
+++ b/index.html
@@ -326,19 +326,61 @@
 
           <section> <!-- start of Next Steps: How to make your code reusable -->
             <section data-state="standard">
-              <h2>html slides</h2>
-              <p>content</p>
-              <p>with html</p>
+              <h2>Next steps</h2>
+              How to make your code reusable
             </section>
 
             <section data-state="standard" data-markdown>
               <textarea data-template>
-                # Header
+                ### Add a license
 
-                - list item
-                - another one
+                - Others cannot safely copy, modify, or distribute your work without a license
+                - Common licenses for code:
+                    - Apache 2.0
+                    - MIT
+                    - GNU GPLv3
+                - Find a license that fits your project: https://choosealicense.com/
               </textarea>
             </section>
+
+            <section data-state="standard" data-markdown>
+              <textarea data-template>
+                ### FAIR software checklist
+
+                - Check how much your project adheres to the FAIR principles: https://fairsoftwarechecklist.net/v0.2/
+                - Add a badge to your GitHub repository: https://github.com/fair-software/howfairis
+
+              </textarea>
+            </section>
+
+            <section data-state="standard" data-markdown>
+              <textarea data-template>
+                ### Add a CITATION file
+
+                - Use the cff initializer to create a CITATION.cff file for you project: https://citation-file-format.github.io/cff-initializer-javascript/#/
+              </textarea>
+            </section>
+
+            <section data-state="standard" data-markdown>
+              <textarea data-template>
+                ### Publish your project on Zenodo
+
+                - Link your GitHub repository to Zenodo: https://zenodo.org/login/?next=%2Faccount%2Fsettings%2Fgithub%2F
+                - When you publish a release of your project, it will be uploaded to Zenodo and a DOI is assigned to it
+
+              </textarea>
+            </section>
+
+            <section data-state="standard" data-markdown>
+              <textarea data-template>
+                ### Publish your project on Zenodo
+
+                - The Turing Way Community. (2022). <em>Licenses</em>. Zenodo. https://zenodo.org/records/7625728
+                - List of approved licenses by Open Source Foundation: https://opensource.org/license?ls=apache
+
+              </textarea>
+            </section>
+
           </section> <!-- end of Next Steps: How to make your code reusable -->
 
           <section> <!-- start of Work on Your Own Project -->
