Add reproducibility check slides

--- a/index.html
+++ b/index.html
@@ -402,17 +402,32 @@
 
           <section> <!-- start of Reusability Check -->
             <section data-state="standard">
-              <h2>html slides</h2>
-              <p>content</p>
-              <p>with html</p>
+              <h2>Reproducibility check</h2>
             </section>
 
             <section data-state="standard" data-markdown>
               <textarea data-template>
-                # Header
+                ### Reproducibility check
 
-                - list item
-                - another one
+                - Share your project with one of your peers
+                - Answer the following questions:
+                  - Is the code clearly documented?
+                  - Can you reuse the code?
+                  - Are you able to rerun the code independently and can you reproduce results?
+                  - How could the reusability of the project be improved?
+                - Be constructive (reproducibility is difficult)
+                - Be reasonable (not every project needs an end-to-end reproducibility workflow)
+
+              </textarea>
+            </section>
+
+            <section data-state="standard" data-markdown>
+              <textarea data-template>
+                ### Resources
+
+                - ReproHack: https://www.reprohack.org/
+                - CODECHECK: https://codecheck.org.uk/
+
               </textarea>
             </section>
           </section> <!-- end of Reusability Check -->
