Add wrap-up slides

--- a/index.html
+++ b/index.html
@@ -434,17 +434,45 @@
 
           <section> <!-- start of Wrap-Up -->
             <section data-state="standard">
-              <h2>html slides</h2>
-              <p>content</p>
-              <p>with html</p>
+              <h2>Wrap-up</h2>
             </section>
 
             <section data-state="standard" data-markdown>
               <textarea data-template>
-                # Header
+                ### Summary
 
-                - list item
-                - another one
+                Ingredients for reusable code:
+                - Version control
+                - Code in public repository (e.g., GitHub, see also [Codeberg](https://codeberg.org/))
+                - Description of dependencies
+                - A good README (and documentation)
+                - Readble code
+
+              </textarea>
+            </section>
+
+            <section data-state="standard" data-markdown>
+              <textarea data-template>
+                ### Next steps
+
+                - Philosophy: Partial reproducibility > no reproducibility!
+                - Small steps: Improve practices from one project to the next
+                - Get inspiration from prominent examples (e.g., numpy or tidyverse)
+                - Pain point: Resources vs. pay-off
+                  - Many reusability techniques take resources to learn/apply (e.g., git)
+                  - <b>But</b>: They will also save resources in the future
+                - Reusability should match the scope of your project
+                
+              </textarea>
+            </section>
+
+            <section data-state="standard" data-markdown>
+              <textarea data-template>
+                ### Reference and further reading
+
+                - Carptentries workshop [material](https://carpentries-incubator.github.io/reproducible-research-through-reusable-code-in-1-day/index.html) <em>Reproducible research through reusable code in 1 day</em>
+                - The Turing Way Community. (2022). <em>The Turing Way: A handbook for reproducible, ethical and collaborative research (1.0.2)</em>. Zenodo. https://zenodo.org/records/7625728
+                
               </textarea>
             </section>
           </section> <!-- end of Wrap-Up -->
